--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -3,39 +3,51 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CyberApp.MainPage">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
-            VerticalOptions="Center">
+    <StackLayout>
+        <ListView x:Name="ViewCharacters">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <ViewCell.View>
+                            <StackLayout>
+                                <Label Text="{Binding Name}" FontSize="16" />
+                                <Label Text="{Binding Age}" FontSize="14" />
+                            </StackLayout>
+                        </ViewCell.View>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        
+        <!-- <AbsoluteLayout HorizontalOptions="Fill" VerticalOptions="End"> -->
+        <!--     <HorizontalStackLayout HorizontalOptions="Center"> -->
+        <!--         <Button  -->
+        <!--             Text="New" -->
+        <!--             CornerRadius="25" -->
+        <!--             AbsoluteLayout.LayoutBounds="90, 100, 100, 50" -->
+        <!--             Margin="15"> -->
+        <!--         </Button> -->
+        <!--         <Button  -->
+        <!--             Text="New" -->
+        <!--             CornerRadius="25" -->
+        <!--             AbsoluteLayout.LayoutBounds="100,50" -->
+        <!--             Margin="15"> -->
+        <!--         </Button> -->
+        <!--     </HorizontalStackLayout> -->
+        <!-- </AbsoluteLayout> -->
+        <Image Source="settings.svg"/>
 
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
-
-            <Label
-                Text="Hello, World!"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
-
-            <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
-
-        </VerticalStackLayout>
-    </ScrollView>
-
+        <!-- <Grid> -->
+        <!--     <Grid.RowDefinitions> -->
+        <!--         <RowDefinition /> -->
+        <!--         <RowDefinition /> -->
+        <!--     </Grid.RowDefinitions> -->
+        <!--     <Grid.ColumnDefinitions> -->
+        <!--         <ColumnDefinition /> -->
+        <!--         <ColumnDefinition /> -->
+        <!--     </Grid.ColumnDefinitions> -->
+        <!--      -->
+        <!--     <ImageButton Grid.Row="0" Grid.Column="0" Source="settings.svg" /> -->
+        <!-- </Grid> -->
+    </StackLayout>
 </ContentPage>
