--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -3,13 +3,14 @@
     x:Class="CyberApp.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:CyberApp.View_Model"
-    xmlns:viewModel="clr-namespace:CyberApp.View_Model"
+    xmlns:local="clr-namespace:CyberApp"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
         Title="Персонажи"
-        ContentTemplate="{DataTemplate viewModel:MainPage}"
+        ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
+    <ShellContent />
+        
 
 </Shell>
