--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -3,32 +3,11 @@
     x:Class="CyberApp.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:CyberApp"
+    xmlns:local="clr-namespace:CyberApp.View"
     xmlns:icons="clr-namespace:CyberApp.Models"
     Shell.FlyoutBehavior="Disabled">
-
-    <Shell.TitleView>
-        <Grid ColumnDefinitions="9*,1*"
-              Margin="0, 0, 8, 0">
-            <Label x:Name="title" 
-                   Grid.Column="0" 
-                   FontSize="20"
-                   FontAttributes="Bold"
-                   TextColor="White"
-                   HorizontalOptions="Start"
-                   VerticalTextAlignment="Center"/>
-            <ImageButton Grid.Column="1" HorizontalOptions="Center" Clicked="OnDeleteCharactersClick">
-                <Image.Source>
-                    <FontImageSource
-                        FontFamily="MaterialIcons"
-                        Glyph="{x:Static icons:IconFont.Delete_selected}"
-                        Size="30" />
-                </Image.Source>
-            </ImageButton>
-        </Grid>
-    </Shell.TitleView>
     
-        <ShellContent
+    <ShellContent
             Title="Персонажи"
             ContentTemplate="{DataTemplate local:MainPage}"
             Route="MainPage">
