--- a/CyberApp.Core/View/MainPage.xaml
+++ b/CyberApp.Core/View/MainPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:icons="clr-namespace:CyberApp.Data.Models;assembly=CyberApp.Data"
-             xmlns:constans="clr-namespace:CyberApp.Data.Models.Constants;assembly=CyberApp.Data"
+             xmlns:constans="clr-namespace:CyberApp.Data.Model.Constants;assembly=CyberApp.Data"
              x:Class="CyberApp.View.MainPage">
     <NavigationPage.TitleView>
             <Grid ColumnDefinitions="9* , 1*"
