--- a/CyberApp.Core/AppShell.xaml
+++ b/CyberApp.Core/AppShell.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:CyberApp.View"
-    xmlns:icons="clr-namespace:CyberApp.Data.Models;assembly=CyberApp.Data"
+    xmlns:icons="clr-namespace:CyberApp.Data.Model;assembly=CyberApp.Data"
     Shell.FlyoutBehavior="Disabled">
     
     <ShellContent
