--- a/CyberApp.Core/View/CreateCharacterView.xaml
+++ b/CyberApp.Core/View/CreateCharacterView.xaml
@@ -1,32 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<TabbedPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CyberApp.View.CreateCharacter">
+             x:Class="CyberApp.View.QuestionView">
     <NavigationPage.TitleView>
-        <Label Text="Новый персонаж"
-               HorizontalTextAlignment="Center"
+        <Label Text="{x:Binding SelectedClass}" 
+               Grid.Column="0" 
+               FontSize="18"
+               FontAttributes="Bold"
+               TextColor="White"
+               HorizontalOptions="Start"
                VerticalTextAlignment="Center"/>
     </NavigationPage.TitleView>
-    
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
+    <ContentPage.Content>
         
-        <Button Grid.Column="1" Grid.ColumnSpan="3" Grid.Row="1" Text="Преген" Clicked="Button_OnClicked"/>
-        <Button Grid.Column="1" Grid.ColumnSpan="3" Grid.Row="2" Text="Частичная калькуляция" Clicked="Button_OnClicked"/>
-        <Button Grid.Column="1" Grid.ColumnSpan="3" Grid.Row="3" Text="Полная калькуляция" Clicked="Button_OnClicked"/>
-    </Grid>
-</ContentPage>
+    </ContentPage.Content>
+</TabbedPage>
