--- a/CyberApp.Core/View/ClassSelectionView.xaml
+++ b/CyberApp.Core/View/ClassSelectionView.xaml
@@ -7,6 +7,8 @@
              x:Class="CyberApp.View.ClassSelection">
     <NavigationPage.TitleView>
         <Label Text="Выбор класса" 
+               TextColor="White"
+               FontSize="18"
                HorizontalTextAlignment="Center"
                VerticalTextAlignment="Center"/>
     </NavigationPage.TitleView>
@@ -17,10 +19,10 @@
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
-                        <RowDefinition Height="5*"/>
+                        <RowDefinition Height="6*"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <Border BackgroundColor="Red" Padding="2" Margin="10">
+                    <Border Grid.Row="1" BackgroundColor="Red" Padding="2" Margin="10">
                         <StackLayout BackgroundColor="White">
                             <Image x:Name="ImageView" Source="{Binding Image}"
                                    WidthRequest="195"
