--- a/CyberApp.Core/View/SelectCharacterCreaterView.xaml
+++ b/CyberApp.Core/View/SelectCharacterCreaterView.xaml
@@ -2,7 +2,7 @@
 
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CyberApp.View.CreateCharacter">
+             x:Class="CyberApp.View.SelectCharacterCreaterView">
     <NavigationPage.TitleView>
         <Label Text="Новый персонаж"
                FontSize="18"
