--- a/CyberApp.Core/View/CreateCharacterView.xaml
+++ b/CyberApp.Core/View/CreateCharacterView.xaml
@@ -2,7 +2,7 @@
 
 <TabbedPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CyberApp.View.QuestionView">
+             x:Class="CyberApp.View.CreateCharacterView">
     <NavigationPage.TitleView>
         <Label Text="{x:Binding SelectedClass}" 
                Grid.Column="0" 
@@ -13,6 +13,8 @@
                VerticalTextAlignment="Center"/>
     </NavigationPage.TitleView>
     <ContentPage.Content>
-        
+        <DataTemplate>
+            
+        </DataTemplate>
     </ContentPage.Content>
 </TabbedPage>
