Set ServiceProvider parameter in ClassSelectionView

--- a/CyberApp.Core/View/CreateCharacterView.xaml
+++ b/CyberApp.Core/View/CreateCharacterView.xaml
@@ -12,9 +12,7 @@
                HorizontalOptions="Start"
                VerticalTextAlignment="Center"/>
     </NavigationPage.TitleView>
-    <ContentPage.Content>
-        <DataTemplate>
-            
-        </DataTemplate>
-    </ContentPage.Content>
+    <ContentPage>
+
+    </ContentPage>
 </TabbedPage>
